# enhanced-RANSAC-ground-segmentation

./: CITATION.cff  README.md
enhanced_ransac_ground_segmentation/: CMakeLists.txt  compile.sh
enhanced_ransac_ground_segmentation/config/: enhanced_ransac.yaml
enhanced_ransac_ground_segmentation/include/: box_filter.h  constant.h  ground_estimation.h  noise_filter.h  point_cloud_loader.h  point_cloud_visualizer.h  ransac.h  voxel_filter.h  wall_filter.h
enhanced_ransac_ground_segmentation/include/common/: constant.h
enhanced_ransac_ground_segmentation/include/filter/: box_filter.h  noise_filter.h  voxel_filter.h  wall_filter.h
enhanced_ransac_ground_segmentation/include/io/: point_cloud_loader.h
enhanced_ransac_ground_segmentation/include/segmentation/: ground_estimation.h  ransac.h
enhanced_ransac_ground_segmentation/include/visualization/: point_cloud_visualizer.h
enhanced_ransac_ground_segmentation/plan/: software_c4_structure.uml
enhanced_ransac_ground_segmentation/src/: box_filter.cpp  ground_estimation.cpp  main.cpp  noise_filter.cpp  point_cloud_loader.cpp  point_cloud_visualizer.cpp  ransac.cpp  ransac.cu  voxel_filter.cpp  wall_filter.cpp
enhanced_ransac_ground_segmentation/src/app/: main.cpp
enhanced_ransac_ground_segmentation/src/filter/: CMakeLists.txt  box_filter.cpp  noise_filter.cpp  voxel_filter.cpp  wall_filter.cpp
enhanced_ransac_ground_segmentation/src/io/: CMakeLists.txt  point_cloud_loader.cpp
enhanced_ransac_ground_segmentation/src/segmentation/: CMakeLists.txt  ground_estimation.cpp  ransac.cpp  ransac.cu
enhanced_ransac_ground_segmentation/src/visualization/: CMakeLists.txt  point_cloud_visualizer.cpp
